# diff_tool

./: README.md  pyproject.toml
src/diff_tool/: main.py
tests/: test_main.py
